[gd_scene load_steps=6 format=3 uid="uid://c5xvlav80j17n"]

[ext_resource type="Theme" uid="uid://csfhbnloec3rr" path="res://scenes/UI/game_ui_theme.tres" id="1_uipma"]
[ext_resource type="Script" uid="uid://clx4pcxlitw5p" path="res://scenes/UI/day_night_cycle.gd" id="2_f5qvo"]
[ext_resource type="Texture2D" uid="uid://4yevfxaggy8w" path="res://asset/UI/Sprite sheets/basic_UI_sprite.png" id="2_t1cj0"]
[ext_resource type="Texture2D" uid="uid://cc3gametgm4e7" path="res://asset/UI/sleep_icon.png" id="3_c5ms4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c5ms4"]
atlas = ExtResource("2_t1cj0")
region = Rect2(437, 34, 7, 12)

[node name="DayNightCycle" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_uipma")
script = ExtResource("2_f5qvo")

[node name="day_panel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -85.0
offset_right = -5.0
offset_bottom = 26.0
theme_type_variation = &"DayNightCounterPanel"

[node name="MarginContainer" type="MarginContainer" parent="day_panel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="DayLabel" type="Label" parent="day_panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayNightLabel"
text = "Day 0"

[node name="time_panel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -85.0
offset_top = 30.0
offset_right = -5.0
offset_bottom = 56.0
theme_type_variation = &"DayNightCounterPanel"

[node name="MarginContainer" type="MarginContainer" parent="time_panel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="TimeLabel" type="Label" parent="time_panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayNightLabel"
text = "05:00"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = -85.0
offset_top = 58.0
offset_right = -2.0
offset_bottom = 77.0

[node name="play_button" type="Button" parent="Control"]
layout_mode = 0
offset_right = 26.0
offset_bottom = 18.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect" type="TextureRect" parent="Control/play_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_c5ms4")

[node name="time_button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 28.0
offset_right = 54.0
offset_bottom = 18.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect" type="TextureRect" parent="Control/time_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_c5ms4")

[node name="TextureRect2" type="TextureRect" parent="Control/time_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -6.0
offset_right = 2.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_c5ms4")

[node name="sleep_button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 56.0
offset_right = 82.0
offset_bottom = 18.0
theme_type_variation = &"NextDayButton"

[node name="TextureRect" type="TextureRect" parent="Control/sleep_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -6.0
offset_right = 7.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_c5ms4")
expand_mode = 1

[connection signal="pressed" from="Control/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/time_button" to="." method="_on_time_button_pressed"]
[connection signal="pressed" from="Control/sleep_button" to="." method="_on_sleep_button_pressed"]
